[project]
name = "agent-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.12",
    "gitpython>=3.1.44",
    "jupyter>=1.1.1",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-openai>=0.3.22",
    "nest-asyncio>=1.6.0",
    "ragas>=0.2.15",
]
