[project]
name = "agent-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb==0.5.3",
    "gitpython==3.1.43",
    "jupyter>=1.1.1",
    "langchain-chroma==0.1.2",
    "langchain-community==0.2.12",
    "langchain-core==0.2.30",
    "langchain-openai==0.1.21",
    "nest-asyncio==1.6.0",
    "ragas==0.1.14",
]
